Refactor project documentation and code structure
- Updated stakeholder roles in project plans to use consistent naming conventions (ManagementMode to management-mode).
- Created OpenAPI specification for the RustQuote service, detailing health check and quote retrieval endpoints.
- Added a deployment script for Docker to streamline application deployment.
- Enhanced API handlers with detailed documentation and improved error handling.
- Introduced a configuration manager module with placeholder functionality for future enhancements.
- Defined application error types and implemented conversions for better error handling in the API.
- Removed unused models and organized data models into a dedicated module.
- Updated main application entry point to listen on port 8080 and improved server initialization.
- Added integration tests for health check endpoint, ensuring consistent response structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
 serde = { version = "1.0", features = ["derive"] } # Added for models
 serde_json = "1.0" # Added for JSON processing in services and potentially handlers
+thiserror = "1.0" # For custom error handling
 
 [dev-dependencies]
+cargo-tarpaulin = "0.27" # For code coverage
 tempfile = "3.10.1" # For creating temporary files in tests
 # serde_json is already a main dependency, but good to note its use in tests.
 # If it were only for tests, it would go here.
