--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,47 +2,58 @@ name: Rust CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build_and_test:
-    name: Build and Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+    - uses: actions/checkout@v3
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+    - name: Build
+      run: cargo build --verbose
+    - name: Run linters
+      run: cargo clippy -- -D warnings
+    - name: Check formatting
+      run: cargo fmt --check
+    - name: Run tests
+      run: cargo test --verbose
+    - name: Install cargo-tarpaulin
+      run: cargo install cargo-tarpaulin
+    - name: Run tests with coverage (tarpaulin)
+      run: cargo tarpaulin --out Lcov --output-dir ./coverage
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: ./coverage/lcov.info
+
+  build_docker_image:
+    needs: build_and_test # Depends on the successful completion of build_and_test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
         with:
-          components: rustfmt, clippy
-      - name: Cache Cargo dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-      - name: Run linter (clippy)
-        run: cargo clippy --all-targets --all-features -- -D warnings
-      - name: Check formatting (rustfmt)
-        run: cargo fmt --all -- --check
-      - name: Run tests
-        run: cargo test --all-features # This will run all unit and integration tests
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin --version 0.27.1 # Pinning version for stability
-      - name: Generate code coverage report
-        run: cargo tarpaulin --out Xml --output-dir ./coverage --all-features --engine llvm --timeout 120 -- --test-threads=1
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: ./coverage/cobertura.xml
+          context: ./rust_quote_service # Path to the directory containing the Dockerfile and build context
+          file: ./rust_quote_service/Dockerfile # Path to the Dockerfile
+          push: false # For MVP, we are not pushing to a registry
+          tags: rustquote-service:latest # Tag the image
+          # Optional: Add build arguments if your Dockerfile needs them
+          # build-args: |
+          #   ARG_NAME=value
