--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,49 +11,43 @@ env:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
-    - name: Build
-      run: cargo build --verbose
-    - name: Run linters
-      run: cargo clippy -- -D warnings
-    - name: Check formatting
-      run: cargo fmt --check
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Install cargo-tarpaulin
-      run: cargo install cargo-tarpaulin
-    - name: Run tests with coverage (tarpaulin)
-      run: cargo tarpaulin --out Lcov --output-dir ./coverage
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report
-        path: ./coverage/lcov.info
-
-  build_docker_image:
-    needs: build_and_test # Depends on the successful completion of build_and_test
+    name: Build, Test, Lint, Format & Coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
-          context: ./rust_quote_service # Path to the directory containing the Dockerfile and build context
-          file: ./rust_quote_service/Dockerfile # Path to the Dockerfile
-          push: false # For MVP, we are not pushing to a registry
-          tags: rustquote-service:latest # Tag the image
-          # Optional: Add build arguments if your Dockerfile needs them
-          # build-args: |
-          #   ARG_NAME=value
+          components: clippy, rustfmt
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install cargo-tarpaulin
+        run: cargo install cargo-tarpaulin --version 0.27.1 # Pinned version for stability
+
+      - name: Build
+        run: cargo build --verbose --release
+
+      - name: Run tests
+        run: cargo test --verbose
+
+      - name: Run linter (Clippy)
+        run: cargo clippy -- -D warnings
+
+      - name: Check formatting (rustfmt)
+        run: cargo fmt --check
+
+      - name: Generate code coverage (Tarpaulin)
+        run: cargo tarpaulin --verbose --out Lcov --output-dir ./coverage --run-types Tests --engine llvm --timeout 120
+
+      - name: Upload coverage report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ./coverage/lcov.info
+          if-no-files-found: error # Fail if no coverage report is found
