--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,12 @@ tracing-subscriber = { version = "0.3", features = ["fmt"] }
 serde = { version = "1.0", features = ["derive"] } # Added for models
 serde_json = "1.0" # Added for JSON processing in services and potentially handlers
 thiserror = "1.0" # For custom error handling
+dotenvy = "0.15" # For loading .env files
 
 [dev-dependencies]
 cargo-tarpaulin = "0.27" # For code coverage
 tempfile = "3.10.1" # For creating temporary files in tests
+serial_test = "3.0.0" # For running tests serially
 tower = { version = "0.5.2", features = ["util"] } # For ServiceExt in tests
 hyper = { version = "1.6.0", features = ["full"] } # For body utilities in tests if not covered by axum::body
 # serde_json is already a main dependency, but good to note its use in tests.
