CI: Add deployment step to pipeline

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,3 +56,14 @@ jobs:
           name: coverage-report
           path: ./coverage/lcov.info
           if-no-files-found: error # Fail if no coverage report is found
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build_and_test # Ensure deployment runs after successful build and test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run deployment script
+        run: chmod +x ./scripts/deploy.sh && ./scripts/deploy.sh
